# discord-music-bot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  prd.json  progress.txt  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
bot/: __main__.py  bot.py
bot/api/: auth.py  guilds.py  player.py  search.py  server.py
bot/audio/: queue.py  resolver.py  voice.py
bot/cogs/: music.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: AppShell.tsx  PlaybackControls.tsx  PlayerBar.tsx  QueueView.tsx  SearchBar.tsx  Sidebar.tsx
dashboard/src/pages/: DashboardPage.tsx  GuildPickerPage.tsx  LoginPage.tsx
scripts/: prd.json  progress.txt  ralph.sh
tasks/: prd-dashboard-reset-on-skip.md  prd-dashboard-skip-and-guild-fixes.md  prd-discord-music-bot.md  prd-fix-pynacl-voice-dependency.md  prd-guild-picker-and-ui-redesign.md  prd-remove-spotify-integration.md  prd-web-dashboard.md
tests/: conftest.py  test_api_server.py  test_auth.py  test_guilds_api.py  test_player_api.py  test_scaffold.py  test_search_api.py  test_smoke_config.py
tests/integration/: conftest.py  test_controls.py  test_play_command.py  test_queue_command.py  test_skip_command.py  test_stop_command.py
tests/unit/: test_queue.py  test_resolver.py  test_voice.py
